// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner should render component with custom nextStepName 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c0 {
  display: flex;
  flex-direction: column;
  min-width: 388px;
}

.c4 {
  display: flex;
  overflow: hidden;
  height: 4px;
  border-radius: 2px;
  background-color: var(--admiral-color-Neutral_Neutral20, #D7D8DA);
}

.c5 {
  background-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c1 {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin-bottom: 8px;
}

.c2 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Long, 400);
  font-size: var(--admiral-font-size-Body_Body2Long, 14px);
  line-height: var(--admiral-line-height-Body_Body2Long, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Neutral_Neutral90, #252629);
}

.c3 {
  white-space: nowrap;
  flex-shrink: 0;
  color: var(--admiral-color-Neutral_Neutral50, #74767B);
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Caption_Caption1, 400);
  font-size: var(--admiral-font-size-Caption_Caption1, 12px);
  line-height: var(--admiral-line-height-Caption_Caption1, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

.c6 {
  width: 100%;
  text-align: left;
  margin-top: 8px;
  color: var(--admiral-color-Neutral_Neutral50, #74767B);
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Caption_Caption1, 400);
  font-size: var(--admiral-font-size-Caption_Caption1, 12px);
  line-height: var(--admiral-line-height-Caption_Caption1, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

<body>
    <div>
      <div
        class="c0"
      >
        <div
          aria-hidden="true"
          class="c1"
        >
          <div
            class="c2"
          >
            Название третьего шага
          </div>
          <div
            class="c3"
          >
            3 из 6 шагов
          </div>
        </div>
        <div
          class="c4"
        >
          <div
            aria-valuemax="6"
            aria-valuemin="0"
            aria-valuenow="3"
            aria-valuetext="шаг 3: название третьего шага"
            class="c5"
            role="progressbar"
            style="width: 50%;"
            tabindex="0"
          />
        </div>
        <div
          aria-hidden="true"
          class="c6"
        >
          Далее следует шаг: название четвертого шага
        </div>
      </div>
    </div>
  </body>,
  "container": .c0 {
  display: flex;
  flex-direction: column;
  min-width: 388px;
}

.c4 {
  display: flex;
  overflow: hidden;
  height: 4px;
  border-radius: 2px;
  background-color: var(--admiral-color-Neutral_Neutral20, #D7D8DA);
}

.c5 {
  background-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c1 {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin-bottom: 8px;
}

.c2 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Long, 400);
  font-size: var(--admiral-font-size-Body_Body2Long, 14px);
  line-height: var(--admiral-line-height-Body_Body2Long, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Neutral_Neutral90, #252629);
}

.c3 {
  white-space: nowrap;
  flex-shrink: 0;
  color: var(--admiral-color-Neutral_Neutral50, #74767B);
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Caption_Caption1, 400);
  font-size: var(--admiral-font-size-Caption_Caption1, 12px);
  line-height: var(--admiral-line-height-Caption_Caption1, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

.c6 {
  width: 100%;
  text-align: left;
  margin-top: 8px;
  color: var(--admiral-color-Neutral_Neutral50, #74767B);
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Caption_Caption1, 400);
  font-size: var(--admiral-font-size-Caption_Caption1, 12px);
  line-height: var(--admiral-line-height-Caption_Caption1, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

<div>
    <div
      class="c0"
    >
      <div
        aria-hidden="true"
        class="c1"
      >
        <div
          class="c2"
        >
          Название третьего шага
        </div>
        <div
          class="c3"
        >
          3 из 6 шагов
        </div>
      </div>
      <div
        class="c4"
      >
        <div
          aria-valuemax="6"
          aria-valuemin="0"
          aria-valuenow="3"
          aria-valuetext="шаг 3: название третьего шага"
          class="c5"
          role="progressbar"
          style="width: 50%;"
          tabindex="0"
        />
      </div>
      <div
        aria-hidden="true"
        class="c6"
      >
        Далее следует шаг: название четвертого шага
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Spinner should render component with custom stepName 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c0 {
  display: flex;
  flex-direction: column;
  min-width: 388px;
}

.c4 {
  display: flex;
  overflow: hidden;
  height: 4px;
  border-radius: 2px;
  background-color: var(--admiral-color-Neutral_Neutral20, #D7D8DA);
}

.c5 {
  background-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c1 {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin-bottom: 8px;
}

.c2 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Long, 400);
  font-size: var(--admiral-font-size-Body_Body2Long, 14px);
  line-height: var(--admiral-line-height-Body_Body2Long, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Neutral_Neutral90, #252629);
}

.c3 {
  white-space: nowrap;
  flex-shrink: 0;
  color: var(--admiral-color-Neutral_Neutral50, #74767B);
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Caption_Caption1, 400);
  font-size: var(--admiral-font-size-Caption_Caption1, 12px);
  line-height: var(--admiral-line-height-Caption_Caption1, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

.c6 {
  width: 100%;
  text-align: left;
  margin-top: 8px;
  color: var(--admiral-color-Neutral_Neutral50, #74767B);
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Caption_Caption1, 400);
  font-size: var(--admiral-font-size-Caption_Caption1, 12px);
  line-height: var(--admiral-line-height-Caption_Caption1, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

<body>
    <div>
      <div
        class="c0"
      >
        <div
          aria-hidden="true"
          class="c1"
        >
          <div
            class="c2"
          >
            Название третьего этапа
          </div>
          <div
            class="c3"
          >
            3 из 6 этапов
          </div>
        </div>
        <div
          class="c4"
        >
          <div
            aria-valuemax="6"
            aria-valuemin="0"
            aria-valuenow="3"
            aria-valuetext="этап 3: название третьего этапа"
            class="c5"
            role="progressbar"
            style="width: 50%;"
            tabindex="0"
          />
        </div>
        <div
          aria-hidden="true"
          class="c6"
        >
          Далее - название четвертого этапа
        </div>
      </div>
    </div>
  </body>,
  "container": .c0 {
  display: flex;
  flex-direction: column;
  min-width: 388px;
}

.c4 {
  display: flex;
  overflow: hidden;
  height: 4px;
  border-radius: 2px;
  background-color: var(--admiral-color-Neutral_Neutral20, #D7D8DA);
}

.c5 {
  background-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c1 {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin-bottom: 8px;
}

.c2 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Long, 400);
  font-size: var(--admiral-font-size-Body_Body2Long, 14px);
  line-height: var(--admiral-line-height-Body_Body2Long, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Neutral_Neutral90, #252629);
}

.c3 {
  white-space: nowrap;
  flex-shrink: 0;
  color: var(--admiral-color-Neutral_Neutral50, #74767B);
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Caption_Caption1, 400);
  font-size: var(--admiral-font-size-Caption_Caption1, 12px);
  line-height: var(--admiral-line-height-Caption_Caption1, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

.c6 {
  width: 100%;
  text-align: left;
  margin-top: 8px;
  color: var(--admiral-color-Neutral_Neutral50, #74767B);
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Caption_Caption1, 400);
  font-size: var(--admiral-font-size-Caption_Caption1, 12px);
  line-height: var(--admiral-line-height-Caption_Caption1, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

<div>
    <div
      class="c0"
    >
      <div
        aria-hidden="true"
        class="c1"
      >
        <div
          class="c2"
        >
          Название третьего этапа
        </div>
        <div
          class="c3"
        >
          3 из 6 этапов
        </div>
      </div>
      <div
        class="c4"
      >
        <div
          aria-valuemax="6"
          aria-valuemin="0"
          aria-valuenow="3"
          aria-valuetext="этап 3: название третьего этапа"
          class="c5"
          role="progressbar"
          style="width: 50%;"
          tabindex="0"
        />
      </div>
      <div
        aria-hidden="true"
        class="c6"
      >
        Далее - название четвертого этапа
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Spinner should render component without nextStepName 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c0 {
  display: flex;
  flex-direction: column;
  min-width: 388px;
}

.c4 {
  display: flex;
  overflow: hidden;
  height: 4px;
  border-radius: 2px;
  background-color: var(--admiral-color-Neutral_Neutral20, #D7D8DA);
}

.c5 {
  background-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c1 {
  display: flex;
  flex-direction: column;
  margin-bottom: 8px;
}

.c2 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Long, 400);
  font-size: var(--admiral-font-size-Body_Body2Long, 14px);
  line-height: var(--admiral-line-height-Body_Body2Long, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Neutral_Neutral90, #252629);
}

.c3 {
  white-space: nowrap;
  flex-shrink: 0;
  color: var(--admiral-color-Neutral_Neutral50, #74767B);
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Caption_Caption1, 400);
  font-size: var(--admiral-font-size-Caption_Caption1, 12px);
  line-height: var(--admiral-line-height-Caption_Caption1, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

<body>
    <div>
      <div
        class="c0"
      >
        <div
          aria-hidden="true"
          class="c1"
        >
          <div
            class="c2"
          >
            Название третьего шага
          </div>
          <div
            class="c3"
          >
            3 из 6 шагов
          </div>
        </div>
        <div
          class="c4"
        >
          <div
            aria-valuemax="6"
            aria-valuemin="0"
            aria-valuenow="3"
            aria-valuetext="шаг 3: название третьего шага"
            class="c5"
            role="progressbar"
            style="width: 50%;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": .c0 {
  display: flex;
  flex-direction: column;
  min-width: 388px;
}

.c4 {
  display: flex;
  overflow: hidden;
  height: 4px;
  border-radius: 2px;
  background-color: var(--admiral-color-Neutral_Neutral20, #D7D8DA);
}

.c5 {
  background-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c1 {
  display: flex;
  flex-direction: column;
  margin-bottom: 8px;
}

.c2 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Long, 400);
  font-size: var(--admiral-font-size-Body_Body2Long, 14px);
  line-height: var(--admiral-line-height-Body_Body2Long, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Neutral_Neutral90, #252629);
}

.c3 {
  white-space: nowrap;
  flex-shrink: 0;
  color: var(--admiral-color-Neutral_Neutral50, #74767B);
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Caption_Caption1, 400);
  font-size: var(--admiral-font-size-Caption_Caption1, 12px);
  line-height: var(--admiral-line-height-Caption_Caption1, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

<div>
    <div
      class="c0"
    >
      <div
        aria-hidden="true"
        class="c1"
      >
        <div
          class="c2"
        >
          Название третьего шага
        </div>
        <div
          class="c3"
        >
          3 из 6 шагов
        </div>
      </div>
      <div
        class="c4"
      >
        <div
          aria-valuemax="6"
          aria-valuemin="0"
          aria-valuenow="3"
          aria-valuetext="шаг 3: название третьего шага"
          class="c5"
          role="progressbar"
          style="width: 50%;"
          tabindex="0"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Spinner should render default component 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c0 {
  display: flex;
  flex-direction: column;
  min-width: 388px;
}

.c4 {
  display: flex;
  overflow: hidden;
  height: 4px;
  border-radius: 2px;
  background-color: var(--admiral-color-Neutral_Neutral20, #D7D8DA);
}

.c5 {
  background-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c1 {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin-bottom: 8px;
}

.c2 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Long, 400);
  font-size: var(--admiral-font-size-Body_Body2Long, 14px);
  line-height: var(--admiral-line-height-Body_Body2Long, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Neutral_Neutral90, #252629);
}

.c3 {
  white-space: nowrap;
  flex-shrink: 0;
  color: var(--admiral-color-Neutral_Neutral50, #74767B);
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Caption_Caption1, 400);
  font-size: var(--admiral-font-size-Caption_Caption1, 12px);
  line-height: var(--admiral-line-height-Caption_Caption1, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

.c6 {
  width: 100%;
  text-align: left;
  margin-top: 8px;
  color: var(--admiral-color-Neutral_Neutral50, #74767B);
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Caption_Caption1, 400);
  font-size: var(--admiral-font-size-Caption_Caption1, 12px);
  line-height: var(--admiral-line-height-Caption_Caption1, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

<body>
    <div>
      <div
        class="c0"
      >
        <div
          aria-hidden="true"
          class="c1"
        >
          <div
            class="c2"
          >
            Название третьего шага
          </div>
          <div
            class="c3"
          >
            3 из 6 шагов
          </div>
        </div>
        <div
          class="c4"
        >
          <div
            aria-valuemax="6"
            aria-valuemin="0"
            aria-valuenow="3"
            aria-valuetext="шаг 3: название третьего шага"
            class="c5"
            role="progressbar"
            style="width: 50%;"
            tabindex="0"
          />
        </div>
        <div
          aria-hidden="true"
          class="c6"
        >
          Далее - название четвертого шага
        </div>
      </div>
    </div>
  </body>,
  "container": .c0 {
  display: flex;
  flex-direction: column;
  min-width: 388px;
}

.c4 {
  display: flex;
  overflow: hidden;
  height: 4px;
  border-radius: 2px;
  background-color: var(--admiral-color-Neutral_Neutral20, #D7D8DA);
}

.c5 {
  background-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c1 {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin-bottom: 8px;
}

.c2 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Long, 400);
  font-size: var(--admiral-font-size-Body_Body2Long, 14px);
  line-height: var(--admiral-line-height-Body_Body2Long, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Neutral_Neutral90, #252629);
}

.c3 {
  white-space: nowrap;
  flex-shrink: 0;
  color: var(--admiral-color-Neutral_Neutral50, #74767B);
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Caption_Caption1, 400);
  font-size: var(--admiral-font-size-Caption_Caption1, 12px);
  line-height: var(--admiral-line-height-Caption_Caption1, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

.c6 {
  width: 100%;
  text-align: left;
  margin-top: 8px;
  color: var(--admiral-color-Neutral_Neutral50, #74767B);
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Caption_Caption1, 400);
  font-size: var(--admiral-font-size-Caption_Caption1, 12px);
  line-height: var(--admiral-line-height-Caption_Caption1, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

<div>
    <div
      class="c0"
    >
      <div
        aria-hidden="true"
        class="c1"
      >
        <div
          class="c2"
        >
          Название третьего шага
        </div>
        <div
          class="c3"
        >
          3 из 6 шагов
        </div>
      </div>
      <div
        class="c4"
      >
        <div
          aria-valuemax="6"
          aria-valuemin="0"
          aria-valuenow="3"
          aria-valuetext="шаг 3: название третьего шага"
          class="c5"
          role="progressbar"
          style="width: 50%;"
          tabindex="0"
        />
      </div>
      <div
        aria-hidden="true"
        class="c6"
      >
        Далее - название четвертого шага
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Spinner should render mobile component 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c0 {
  display: flex;
  flex-direction: column;
  min-width: 388px;
}

.c4 {
  display: flex;
  overflow: hidden;
  height: 4px;
  border-radius: 2px;
  background-color: var(--admiral-color-Neutral_Neutral20, #D7D8DA);
}

.c5 {
  background-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c1 {
  display: flex;
  flex-direction: column;
  margin-bottom: 8px;
}

.c2 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Long, 400);
  font-size: var(--admiral-font-size-Body_Body2Long, 14px);
  line-height: var(--admiral-line-height-Body_Body2Long, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Neutral_Neutral90, #252629);
}

.c3 {
  white-space: nowrap;
  flex-shrink: 0;
  color: var(--admiral-color-Neutral_Neutral50, #74767B);
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Caption_Caption1, 400);
  font-size: var(--admiral-font-size-Caption_Caption1, 12px);
  line-height: var(--admiral-line-height-Caption_Caption1, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

.c6 {
  width: 100%;
  text-align: left;
  margin-top: 8px;
  color: var(--admiral-color-Neutral_Neutral50, #74767B);
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Caption_Caption1, 400);
  font-size: var(--admiral-font-size-Caption_Caption1, 12px);
  line-height: var(--admiral-line-height-Caption_Caption1, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

<body>
    <div>
      <div
        class="c0"
      >
        <div
          aria-hidden="true"
          class="c1"
        >
          <div
            class="c2"
          >
            Название третьего шага
          </div>
          <div
            class="c3"
          >
            3 из 6 шагов
          </div>
        </div>
        <div
          class="c4"
        >
          <div
            aria-valuemax="6"
            aria-valuemin="0"
            aria-valuenow="3"
            aria-valuetext="шаг 3: название третьего шага"
            class="c5"
            role="progressbar"
            style="width: 50%;"
            tabindex="0"
          />
        </div>
        <div
          aria-hidden="true"
          class="c6"
        >
          Далее - название четвертого шага
        </div>
      </div>
    </div>
  </body>,
  "container": .c0 {
  display: flex;
  flex-direction: column;
  min-width: 388px;
}

.c4 {
  display: flex;
  overflow: hidden;
  height: 4px;
  border-radius: 2px;
  background-color: var(--admiral-color-Neutral_Neutral20, #D7D8DA);
}

.c5 {
  background-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c1 {
  display: flex;
  flex-direction: column;
  margin-bottom: 8px;
}

.c2 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Long, 400);
  font-size: var(--admiral-font-size-Body_Body2Long, 14px);
  line-height: var(--admiral-line-height-Body_Body2Long, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Neutral_Neutral90, #252629);
}

.c3 {
  white-space: nowrap;
  flex-shrink: 0;
  color: var(--admiral-color-Neutral_Neutral50, #74767B);
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Caption_Caption1, 400);
  font-size: var(--admiral-font-size-Caption_Caption1, 12px);
  line-height: var(--admiral-line-height-Caption_Caption1, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

.c6 {
  width: 100%;
  text-align: left;
  margin-top: 8px;
  color: var(--admiral-color-Neutral_Neutral50, #74767B);
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Caption_Caption1, 400);
  font-size: var(--admiral-font-size-Caption_Caption1, 12px);
  line-height: var(--admiral-line-height-Caption_Caption1, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

<div>
    <div
      class="c0"
    >
      <div
        aria-hidden="true"
        class="c1"
      >
        <div
          class="c2"
        >
          Название третьего шага
        </div>
        <div
          class="c3"
        >
          3 из 6 шагов
        </div>
      </div>
      <div
        class="c4"
      >
        <div
          aria-valuemax="6"
          aria-valuemin="0"
          aria-valuenow="3"
          aria-valuetext="шаг 3: название третьего шага"
          class="c5"
          role="progressbar"
          style="width: 50%;"
          tabindex="0"
        />
      </div>
      <div
        aria-hidden="true"
        class="c6"
      >
        Далее - название четвертого шага
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
